crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__unsupported_hash.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
sha2_256 (con bytestring #78)
--- unoptimized UPLC
(program 1.1.0 [(builtin sha2_256) (con bytestring #78)])
--- optimized Core
sha2_256 (con bytestring #78)
--- optimized UPLC
(program 1.1.0 [(builtin sha2_256) (con bytestring #78)])
--- result
(con bytestring #2d711642b726b04401627ca9fbac32f5c8530fb1903cc4db02258717921a4881)
--- logs
[]
--- budget
cpu: 341340, memory: 404
